Import of GUGU/App-Pm2Port-0.24 from CPAN.
gitpan-cpan-distribution: App-Pm2Port
gitpan-cpan-version:      0.24
gitpan-cpan-path:         GUGU/App-Pm2Port-0.24.tar.gz
gitpan-cpan-author:       GUGU
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -23,9 +23,11 @@ requires:
   CPANPLUS: 0
   ExtUtils::MakeMaker: 0
   File::Temp: 0
+  FreeBSD::Ports::INDEXhash: 0
   Getopt::Long: 0
   Term::ReadLine: 0
   YAML: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.23
+  repository: http://developers.rambler.ru/svn/perlmodules/App-Pm2Port
+version: 0.24
